objects/AcctSeed__Time_Card_Period__c/fields/AcctSeed__End_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__End_Date__c</fullName>
    <inlineHelpText>Last day of the Time Card Period. This field is automatically calculated to be 6 days after the start date entered for the Time Card Period.. A value entered directly into this field will be overwritten.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>