objects/AcctSeed__Time_Card_Period__c/fields/AcctSeed__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Start_Date__c</fullName>
    <inlineHelpText>Beginning of the Time Card Period. Typically a Monday or Sunday.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>