objects/AcctSeed__Time_Card_Period__c/fields/AcctSeed__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Status__c</fullName>
    <inlineHelpText>&quot;Open&quot; indicates that Time Cards can be entered for this period. &quot;Closed&quot; indicates that no new Time Cards can be entered for this period.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>