objects/AcctSeed__Time_Card_Period__c/validationRules/AcctSeed__Start_Date_Not_Greater_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Start_Date_Not_Greater_End_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AcctSeed__Start_Date__c &gt; AcctSeed__End_Date__c</errorConditionFormula>
    <errorMessage>Time Card Period: The Start Date cannot be greater than the End Date.</errorMessage>
</ValidationRule>