objects/AcctSeed__Time_Card_Period__c/listViews/AcctSeed__All1.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All1</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__End_Date__c</columns>
    <columns>AcctSeed__Start_Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>